<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/add_habit_edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_extra_large"
        android:hint="@string/add_habit_dscpt"
        android:inputType="textCapSentences">
        <requestFocus />
    </androidx.appcompat.widget.AppCompatEditText>

</androidx.appcompat.widget.LinearLayoutCompat>