...
                android:clipToPadding="false"
                android:paddingBottom="84dp"
                android:scrollbarStyle="outsideOverlay"
                tools:listitem="@layout/item_habit" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="@dimen/margin_large"
                android:contentDescription="@string/add_habit_fab_dscpt"
                android:onClick="showAddHabitDialog"
...
